--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@tailwindcss/vite": "^4.0.7",
     "@tanstack/react-query": "^5.66.8",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
-    "tailwindcss": "^4.0.7"
+    "tailwindcss": "^4.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
